# image_resizer_server

./: CMakeLists.txt  readme.md
include/boost_1_75_0/: project-config.jam
include/boost_1_75_0/stage/lib/: libboost_atomic.so.1.75.0  libboost_chrono.so.1.75.0  libboost_container.so.1.75.0  libboost_context.so.1.75.0  libboost_contract.so.1.75.0  libboost_coroutine.so.1.75.0  libboost_date_time.so.1.75.0  libboost_fiber.so.1.75.0  libboost_filesystem.so.1.75.0  libboost_graph.so.1.75.0  libboost_iostreams.so.1.75.0  libboost_json.so.1.75.0  libboost_locale.so.1.75.0  libboost_log.so.1.75.0  libboost_log_setup.so.1.75.0  libboost_math_c99.so.1.75.0  libboost_math_c99f.so.1.75.0  libboost_math_c99l.so.1.75.0  libboost_math_tr1.so.1.75.0  libboost_math_tr1f.so.1.75.0  libboost_math_tr1l.so.1.75.0  libboost_nowide.so.1.75.0  libboost_numpy27.so.1.75.0  libboost_prg_exec_monitor.so.1.75.0  libboost_program_options.so.1.75.0  libboost_python27.so.1.75.0  libboost_random.so.1.75.0  libboost_regex.so.1.75.0  libboost_serialization.so.1.75.0  libboost_stacktrace_addr2line.so.1.75.0  libboost_stacktrace_backtrace.so.1.75.0  libboost_stacktrace_basic.so.1.75.0  libboost_stacktrace_noop.so.1.75.0  libboost_system.so.1.75.0  libboost_thread.so.1.75.0  libboost_timer.so.1.75.0  libboost_type_erasure.so.1.75.0  libboost_unit_test_framework.so.1.75.0  libboost_wave.so.1.75.0  libboost_wserialization.so.1.75.0
include/boost_1_75_0/stage/lib/cmake/boost_atomic-1.75.0/: boost_atomic-config.cmake  libboost_atomic-variant-shared.cmake  (+1 more)
src/: client.cpp  resizer_test.cpp  server.cpp
(+127 files in other folders)
